# bridgio

./: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  start.ps1  start.sh
ML/: .gitignore  README.md  app.py  classifier.py  collect_data.py  hand_tracking.py  labels.json  model.pt  model.py  pyproject.toml  test.py  train.py
ML/dataset/BUT/: 0.npy  1.npy  10.npy  100.npy  101.npy  102.npy  103.npy  104.npy  105.npy  106.npy  107.npy  108.npy  109.npy  11.npy  110.npy  111.npy  112.npy  113.npy  114.npy  115.npy  116.npy  117.npy  118.npy  119.npy  12.npy  120.npy  121.npy  122.npy  123.npy  124.npy  125.npy  126.npy  127.npy  128.npy  129.npy  13.npy  130.npy  131.npy  132.npy  133.npy  (+260 more)
ML/dataset/DO/: 0.npy  1.npy  10.npy  100.npy  101.npy  102.npy  103.npy  104.npy  105.npy  106.npy  107.npy  108.npy  109.npy  11.npy  110.npy  111.npy  112.npy  113.npy  114.npy  115.npy  116.npy  117.npy  118.npy  119.npy  12.npy  120.npy  121.npy  122.npy  123.npy  124.npy  125.npy  126.npy  127.npy  128.npy  129.npy  13.npy  130.npy  131.npy  132.npy  133.npy  (+260 more)
ML/dataset/DOWN/: 0.npy  1.npy  10.npy  100.npy  101.npy  102.npy  103.npy  104.npy  105.npy  106.npy  107.npy  108.npy  109.npy  11.npy  110.npy  111.npy  112.npy  113.npy  114.npy  115.npy  116.npy  117.npy  118.npy  119.npy  12.npy  120.npy  121.npy  122.npy  123.npy  124.npy  125.npy  126.npy  127.npy  128.npy  129.npy  13.npy  130.npy  131.npy  132.npy  133.npy  (+260 more)
ML/dataset/HEART/: 0.npy  1.npy  10.npy  100.npy  101.npy  102.npy  103.npy  104.npy  105.npy  106.npy  (+290 more)
(+3642 files in other folders)
