[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.127.0",
    "mediapipe>=0.10.31",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]
